--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,6 @@ name: Continuous Integration
 on:
   push:
     branches:
-      - main
       - feature/**
   pull_request:
     branches:
@@ -23,13 +22,15 @@ jobs:
           cache: 'npm'
 
       - name: 3. Install Dependencies
-        run: npm install --legacy-peer-deps
+        run: npm ci --legacy-peer-deps
 
-      - name: 4. Run Lint/Tests (Optional)
-        run: echo "No tests configured. Proceeding to build verification."
+      - name: 4. Run Lint &  Run Tests (Zəhmət olmasa aktivləşdirin)
+        run : |
+          npm run lint 
+          npm run test -- --ci
 
       - name: 5. Run Next.js Build Verification
-
         run: npm run build
         env:
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
+
