--- a/.github/workflows/ghcr-cd.yml
+++ b/.github/workflows/ghcr-cd.yml
@@ -6,8 +6,13 @@ on:
       - main
 
 jobs:
+  ci_check:
+    name: CI Check
+    uses: ./.github/workflows/ci.yml
+
   build_and_push_image:
     runs-on: ubuntu-latest
+    needs: ci_check
 
     permissions:
       contents: read
