--- a/.github/workflows/vercel-cd.yml
+++ b/.github/workflows/vercel-cd.yml
@@ -6,8 +6,13 @@ on:
       - main
 
 jobs:
+  ci_check:
+    name: CI Check
+    uses: ./.github/workflows/ci.yml
+
   deploy_vercel:
     runs-on: ubuntu-latest
+    needs: ci_check
 
     steps:
       - name: 1. Checkout Code
