--- a/.github/workflows/google-cd.yml
+++ b/.github/workflows/google-cd.yml
@@ -18,7 +18,7 @@ jobs:
       PROJECT_ID: inmytime
       SERVICE_NAME: in-my-time2
       REGION: europe-west1
-      IMAGE_REPO_URL: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/cloud-run-repo/next-app
+      IMAGE_REPO_URL: europe-west1-docker.pkg.dev/inmytime/cloud-run-repo/next-app
       IMAGE_TAG: ${{ github.sha }}
 
     steps:
