test ci/cd finished [no ci-cd]

--- a/.github/workflows/vercel-cd.yml
+++ b/.github/workflows/vercel-cd.yml
@@ -10,7 +10,9 @@ jobs:
     name: CI Check
     uses: ./.github/workflows/ci.yml
     if: |
-      !contains(github.event.head_commit.message, '[no vercel-cd]')
+      !contains(github.event.head_commit.message, '[no vercel-cd]') &&
+      !contains(github.event.head_commit.message, '[no ci-cd]') &&
+      !contains(github.event.head_commit.message, '[no cd]')
 
   deploy_vercel:
     runs-on: ubuntu-latest
