--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
   ci_check:
     runs-on: ubuntu-latest
     if: |
+      !contains(github.event.head_commit.message, '[no ci-cd]') &&
       !contains(github.event.head_commit.message, '[no ci]')
     steps:
       - name: 1. Checkout Code
