--- a/.github/workflows/ghcr-cd.yml
+++ b/.github/workflows/ghcr-cd.yml
@@ -10,7 +10,9 @@ jobs:
     name: CI Check
     uses: ./.github/workflows/ci.yml
     if: |
-      !contains(github.event.head_commit.message, '[no ghcr-cd]')
+      !contains(github.event.head_commit.message, '[no ghcr-cd]') &&
+      !contains(github.event.head_commit.message, '[no ci-cd]') &&
+      !contains(github.event.head_commit.message, '[no cd]')
 
   build_and_push_image:
     runs-on: ubuntu-latest
