--- a/.github/workflows/google-cd.yml
+++ b/.github/workflows/google-cd.yml
@@ -11,7 +11,9 @@ jobs:
     name: CI Check
     uses: ./.github/workflows/ci.yml
     if: |
-      !contains(github.event.head_commit.message, '[no google-cd]')
+      !contains(github.event.head_commit.message, '[no google-cd]') &&
+      !contains(github.event.head_commit.message, '[no ci-cd]') &&
+      !contains(github.event.head_commit.message, '[no cd]')
 
   deploy_to_cloud_run:
     runs-on: ubuntu-latest
@@ -25,7 +27,7 @@ jobs:
       IMAGE_TAG: ${{ github.sha }}
 
     steps:
-      - name: 1. ⬇️ Checkout Repository (Dockerfile üçün)
+      - name: 1. Checkout Repository
         uses: actions/checkout@v4
 
       - name: Authenticate to Google Cloud
