--- a/.github/workflows/google-cd.yml
+++ b/.github/workflows/google-cd.yml
@@ -19,6 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: ci_check
 
+    environment:
+      name: Production # GitHub Environments-dəki mühitin adı (Məsələn: Production, Staging)
+      url: ${{ steps.deploy.outputs.url }} # Deployment bitdikdən sonra alınacaq URL
+
     env:
       PROJECT_ID: inmytime
       SERVICE_NAME: in-my-time2
@@ -51,6 +55,7 @@ jobs:
           tags: ${{ env.IMAGE_REPO_URL }}:${{ env.IMAGE_TAG }}
 
       - name: Deploy new image to Cloud Run
+        id: deploy-cloud-run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: ${{ env.SERVICE_NAME }}
