--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.2",
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@shelf/jest-mongodb": "^6.0.0",
     "@swc/core": "^1.15.3",
     "@swc/jest": "^0.2.39",
@@ -76,6 +77,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
     "jest": "^30.2.0",
     "mongodb-memory-server": "^10.3.0",
     "next-test-api-route-handler": "^5.0.3",
@@ -84,6 +89,7 @@
     "tailwindcss": "^4.1.9",
     "ts-node": "^10.9.2",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.47.0"
   }
 }
