--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "mongoose": "^8.19.3",
+    "mongoose": "^8.20.1",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -73,7 +73,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^22",
+    "@types/node": "^22.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
@@ -82,11 +82,13 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "mongodb-memory-server": "^10.3.0",
     "next-test-api-route-handler": "^5.0.3",
     "postcss": "^8.5",
     "supertest": "^7.1.4",
     "tailwindcss": "^4.1.9",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "tw-animate-css": "1.3.3",
     "typescript": "^5",
